2009-12-10  Glenn Morris  <rgm@gnu.org>

	* vc-annotate.el (log-view-vc-backend, log-view-vc-fileset):
	Define for compiler.

	* mail/emacsbug.el (report-emacs-bug): Use whichever send command is
	appropriate for the mail-user-agent in use.

2009-12-09  Michael Albinus  <michael.albinus@gmx.de>

	* net/tramp.el (tramp-handle-insert-directory): Suppress error messages.

2009-12-09  Dan Nicolaescu  <dann@ics.uci.edu>

	Fix short log parsing and fontification.
	* vc-bzr.el (vc-bzr-log-view-mode): Match dot in revision number.
	Fix fontification for the [merge] label.

2009-12-09  Vivek Dasmohapatra  <vivek@etla.org>

	Drop some properties to avoid surprises.
	* htmlfontify.el (hfy-ignored-properties): New defcustom.
	(hfy-fontify-buffer): Use it.

2009-12-09  Stefan Monnier  <monnier@iro.umontreal.ca>

	Minor cleanup.
	* ffap.el (ffap-symbol-value): Replace ffap-soft-value.
	Adjust all callers.
	(ffap-locate-file): Remove unused arg `dir-ok' and make other
	args compulsory.  Adjust callers.
	(ffap-gopher-at-point): Remove unused var `name'.

	Get rid of the ELCFILES abomination.
	* Makefile.in (update-elclist, ELCFILES, compile-last): Remove.
	(compile-elcfiles): New phony target.
	(compile-main): Compute ELCFILES dynamically.
	(compile-clean): New target to remove left-over elc files.
	(compile, all): Use it.

2009-12-09  Kenichi Handa  <handa@etlken>

	* international/mule-diag.el: Require help-mode instead of help-fns.

2009-12-09  Kenichi Handa  <handa@m17n.org>

	* international/mule-cmds.el (ucs-names): Supply a sufficiently
	fine ranges instead of pre-calculating accurate ranges.
	Iterate with bigger gc-cons-threshold.

2009-12-08  Dan Nicolaescu  <dann@ics.uci.edu>

	Add support for stashing a snapshot of the current tree.
	* vc-git.el (vc-git-stash-snapshot): New function.
	(vc-git-stash-map, vc-git-extra-menu-map): Add a mapping for it.

2009-12-08  Jose E. Marchesi  <jemarch@gnu.org>

	* play/gomoku.el (gomoku-mode-map): Remap `move-(beginning|end)-of-line'